# writer-helper

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  USER-GUIDE.md
docs/dev-reports/: 2026-05-30-full-feature-test-report.md  2026-05-30-v0.2.1-p0-p1-fixes.md  2026-05-30-v0.2.2-remaining-fixes.md  2026-05-30-v0.3.0-polish-release.md  2026-05-30-v0.3.1-code-review-fixes.md  2026-05-30-v0.4.0-ui-redesign.md  2026-05-30-word-style-editor.md
docs/superpowers/plans/: 2026-05-24-prototype-mvp-plan.md
docs/superpowers/specs/: 2026-05-24-prototype-mvp-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_characters.sql  003_outlines.sql  004_notes.sql  005_goals.sql  006_snapshots.sql  007_ai_config.sql
src-tauri/src/: crypto.rs  db.rs  export.rs  import.rs  lib.rs  main.rs  stats.rs
src-tauri/src/commands/: ai.rs  chapters.rs  characters.rs  goals.rs  mod.rs  notes.rs  outlines.rs  settings.rs  snapshots.rs  volumes.rs  works.rs
src/components/: ErrorBoundary.tsx
src/components/ai/: AiChat.tsx  AiSettings.tsx
src/components/chapters/: ChapterActions.tsx  ChapterTree.tsx
src/components/characters/: CharacterCard.tsx  (+2 more)
src/lib/: db.ts  utils.ts
src/stores/: appStore.ts
src/styles/: animations.css  themes.css
src/types/: index.ts
test/e2e/: VERIFICATION-REPORT.md  test-report.mjs  verify-changes.mjs
(+24 files in other folders)
